--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-	</properties>
+        <spring-data-releasetrain.version>Lovelace-M3</spring-data-releasetrain.version>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -42,7 +43,6 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jdbc</artifactId>
-			<version>1.0.0.M3</version>
 		</dependency>
 	</dependencies>
 
